# radicale

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt
backend/dev/: ical_fidelity.py  radicale_normalization.py  smoke_api.py  smoke_calendar.py  smoke_dav.py
backend/tasksd/: __init__.py  __main__.py  access.py  app.py  auth.py  config.py  service.py
backend/tasksd/dav/: __init__.py  client.py  errors.py  xml.py
backend/tasksd/db/: __init__.py  schema.sql  store.py
backend/tasksd/ical/: __init__.py  canonical.py  edit.py  read.py
backend/tasksd/sync/: __init__.py  engine.py
backend/tests/: conftest.py  helpers.py  test_api.py  test_concurrency.py  test_fidelity.py  test_recur.py  test_scheduling.py  test_security.py  test_settings.py  test_sync.py
backend/tests/corpus/: README.md  icloud.ics  jtx_board.ics  tasks_org.ics  thunderbird.ics
deploy/: Caddyfile.snippet  setup.sh  tasks-cloudflared.compose.yml  tasks-cloudflared.env.example  tasks-notify  tasks.env.example  tasks.service
docs/: DEPLOY.md  phase0-findings.md  recurrence-findings.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  hooks.ts  main.tsx  util.test.ts  util.ts
frontend/src/components/: ArchivedCalendarsModal.tsx  BookingPage.test.tsx  CalendarView.tsx  Login.test.tsx  Login.tsx  (+3 more)
scratch/: Dockerfile  README.md  docker-compose.yml  drop-cache.sh  probe-soren-interaction.sh  reset.sh  verify_soren_patch.py
scratch/radicale/: config
(+3 files in other folders)
